<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaptureTheFlagAndroid2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="ok">OK</string>
    <string name="incorrect_data_description">Login and password must be at least 5 characters, given password must be the same</string>
    <string name="incorrect_data">Incorrect data!</string>
    <string name="recorded">Recorded</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="error">Error!</string>
    <string name="error_incomplete_data">Server returned incomplete data!</string>
    <string name="player_already_exists">Player already exists</string>
    <string name="unknown_error">Unknow error</string>
    <string name="cannot_create_new_player">Cannot create a new player</string>
    <string name="login">Login</string>
    <string name="login_button">Login</string>
    <string name="login_progress">Connecting to server</string>
    <string name="login_failed">Failed to login</string>
    <string name="login_successful">Login successful</string>
    <string name="logout">Logout</string>
    <string name="logout_succesful">Logout successful</string>
    <string name="view_profile">View profile</string>
    <string name="create_new_game">Create new Game</string>
    <string name="gamelist">List of Games</string>
    <string name="no_connection">Could not connect to server. Please check Your internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="server_error">Server returned an error</string>
    <string name="after_list_games">List games</string>
    <string name="after_create_game">Create Game</string>
    <string name="edit_game">Edit game</string>
    <string name="after_logout">Logout</string>
    <string name="game_name">Game name</string>
    <string name="game_description">Game description</string>
    <string name="game_time_start">Time start</string>
    <string name="game_duration">Duration</string>
    <string name="game_points_max">Points max</string>
    <string name="game_players_max">Players max</string>
    <string name="game_localization">Localization</string>
    <string name="game_localization_pick">Pick localization</string>
    <string name="game_flag_quantity">Flag quantity</string>
    <string name="game_flag_quantity_hint">12</string>
    <string name="game_team">Team</string>
    <string name="game_team_hint">Red</string>
    <string name="game_create_game">Create game</string>
    <string name="game_details_name">Game details</string>
    <string name="game_id">ID</string>
    <string name="game_lat">Latitude</string>
    <string name="game_lng">Longitude</string>
    <string name="game_radius">Radius</string>
    <string name="game_status">Status</string>
    <string name="game_owner">Owner</string>
    <string name="game_join">Join</string>
    <string name="game_edit">Edit game</string>
    <string name="game_players_name">Players</string>
    <string name="game_players_list">Players list</string>
    <string name="game_no_players">The game does not yet have players</string>
    <string name="game_sign_in">You joined the game!!</string>
    <string name="game_list_my">My</string>
    <string name="game_list_nearest">Nearest</string>
    <string name="game_list_Completed">Completed</string>
    <string name="game_list_all">All</string>
    <string name="team_red">Red team</string>
    <string name="team_blue">Blue Team</string>
    <string name="team_base_localization">Base localization</string>
    <string name="connecting">Connecting..</string>
    <string name="wrong_date">Wrong date</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="please_enter_gamename">Please enter name</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="please_enter_duration">Please enter duration</string>
    <string name="please_enter_points">Please enter max points</string>
    <string name="please_enter_players">Please enter max players</string>
    <string name="please_enter_radius">Please enter radius</string>
    <string name="please_enter_loc_name">Please enter localization name</string>
    <string name="game_loc_name">Localization name</string>
    <string name="game_created">Game created successfully</string>
    <string name="game_details">Details</string>
    <string name="game_players">Players</string>
    <string name="game_map">Map</string>
    <string name="logo">logo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_changes">Save changes</string>
    <string name="basic_data">Basic Data</string>
    <string name="play">Play</string>
    <string name="leave">Leave</string>
    <!-- Error Codes -->
    <string name="error_code_1">Bad request</string>
    <string name="error_code_2">Internal error</string>
    <string name="error_code_3">Resource not found</string>
    <string name="error_code_4">Resource already exists</string>
    <string name="error_code_5">Resource cannot be deleted</string>
    <string name="error_code_100">Cannot create a new player</string>
    <string name="error_code_101">Player already exists</string>
    <string name="error_code_102">Player cannot be sign in</string>
    <string name="error_code_103">Player cannot be sign out</string>
    <string name="error_code_104">Player is already signed in</string>
    <string name="error_code_105">Game reached maximum of players</string>
    <string name="google_services_not_available">Google services are not currently avalible at this device</string>

</resources>