<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_create_game" />

    <Button
        android:id="@+id/editGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="CreateGame"
        android:text="@string/edit_game" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_logout" />

</LinearLayout>