<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name" />

            <EditText
                android:id="@+id/editTextGameName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/game_name" >

            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_description" />

            <EditText
                android:id="@+id/editTextGameDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/game_description" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time_start" />

            <TimePicker
                android:id="@+id/timePickerTimeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_duration" />

            <EditText
                android:id="@+id/editGameDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_points_max" />

            <EditText
                android:id="@+id/editTextGamePointsMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/game_points_max_hint" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_players_max" />

            <EditText
                android:id="@+id/editTextPlayersMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/game_players_max_hint" />

            <Button
                android:id="@+id/buttonPickLocalization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_localization_pick" />
            
            <Button
                android:id="@+id/buttonCreateGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_create_game" />
         
        </LinearLayout>

    </ScrollView>

</LinearLayout>
