<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:background="#E16820"
        android:orientation="vertical" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/iconActionBar"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/splash_ico" />

        <Button
            android:id="@+id/buttonSave1"
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/border"
            android:onClick="onClickSaveButton"
            android:text="@string/save" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="105dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iconActionBar"
            android:gravity="center_vertical"
            android:text="@string/basic_data"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvGameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/game_name" />

            <EditText
                android:id="@+id/editTextGameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:inputType="text"
                android:padding="3dp" >
            </EditText>

            <TextView
                android:id="@+id/tvMaxPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/game_points_max" />

            <EditText
                android:id="@+id/editTextGamePointsMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvMaxPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/game_players_max" />

            <EditText
                android:id="@+id/editTextGamePlayersMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:inputType="number" />

            <TextView
                android:id="@+id/tvLocalizationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/game_loc_name" />

            <EditText
                android:id="@+id/editTextLocalizationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:inputType="text" />

            <TextView
                android:id="@+id/tvGameRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/game_radius" />

            <EditText
                android:id="@+id/editTextGameRadius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="12"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonSave2"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:ems="12"
                android:onClick="onClickSaveButton"
                android:text="@string/save_changes" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>