<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:background="#E16820"
        android:orientation="vertical" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/iconActionBar"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="1dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/splash_ico" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="80dp"
            android:layout_height="105dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/border"
            android:onClick="onClickDeleteButton"
            android:text="@string/delete" />

        <TextView
            android:layout_width="240dp"
            android:layout_height="105dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/buttonDelete"
            android:layout_toRightOf="@+id/iconActionBar"
            android:gravity="center_vertical"
            android:text="@string/edit_game"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvChooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity = "center"
            android:text="@string/choose_date" />

        <DatePicker
            android:id="@+id/datePickerTimeStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:ems="12"
            android:onClick="onClickSaveButton"
            android:text="@string/save_changes" />
    </LinearLayout>

</RelativeLayout>